--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,5 +1,4 @@
 name: Release Charts
-
 on:
   push:
     branches:
@@ -7,6 +6,7 @@ on:
 
 jobs:
   release:
+    runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: write
